SEC-1413: Add RedirectStrategy to AbstractRetryEntryPoint.